--- a/IGalileo.ipynb
+++ b/IGalileo.ipynb
@@ -25,16 +25,37 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import process_fitbit_sleep_data, process_fitbit_every_data"
+    "from utils import process_fitbit_sleep_data, process_fitbit_other_data, visit_files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "big_feature = process_fitbit_every_data(files)"
+    "list_of_lists = visit_files(files)\n",
+    "big_feature = process_fitbit_other_data(list_of_lists)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_keys(['data/very_active_minutes-2020-05-08.json', 'data/very_active_minutes-2020-04-08.json', 'data/very_active_minutes-2020-07-07.json', 'data/very_active_minutes-2020-03-09.json', 'data/very_active_minutes-2020-06-07.json', 'data/moderately_active_minutes-2020-04-08.json', 'data/moderately_active_minutes-2020-05-08.json', 'data/moderately_active_minutes-2020-06-07.json', 'data/moderately_active_minutes-2020-03-09.json', 'data/moderately_active_minutes-2020-07-07.json', 'data/resting_heart_rate-2020-03-09.json'])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "big_feature.keys()"
    ]
   },
   {
@@ -61,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
